# thesis-

./: .gitignore
src/jetauto_description/: CMakeLists.txt  package.xml
src/jetauto_description/launch/: display.launch.py  gazebo.launch.py
src/jetauto_description/rviz/: urdf.rviz
src/jetauto_description/urdf/: jetauto_car.gazebo.xacro  jetauto_new.urdf
src/jetauto_description/urdf/pro/: gripper.urdf.xacro  jetauto_arm.urdf  jetauto_car.urdf.xacro
src/jetauto_description/urdf/pro/jetauto_arm/: jetauto_arm.usd
